# ImageReader

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  Testing.py
ImageReaderGUI/: CMakeLists.txt
ImageReaderGUI/hdr/: maindialog.h
ImageReaderGUI/src/: main.cpp  maindialog.cpp
ImageReaderGUI/ui/: maindialog.ui
ImageReaderLibraries/: CMakeLists.txt
ImageReaderLibraries/hdr/: Common.hpp  Decoder.hpp  Encoder.hpp  EncoderJPEG.hpp  EncoderPNG.hpp  EncoderTIFF.hpp  ImageProcessingAlgorithms.hpp  ImageReader.hpp
ImageReaderLibraries/src/: Common.cpp  Decoder.cpp  DecoderJPEG.cpp  DecoderPNG.cpp  DecoderTIFF.cpp  Encoder.cpp  EncoderJPEG.cpp  EncoderPNG.cpp  EncoderTIFF.cpp  ImageReader.cpp  TIFFEncoder.cpp  main.cpp
cmake/: init.cmake  macro.cmake
cmake/modules/: FindTIFFXX.cmake  Findpng++.cmake
test/: CMakeLists.txt  main.cpp
